--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,7 @@ a:hover {
 }
 
 body {
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+    margin: 0;
 }
 
 h1 {
