--- a/client/src/pages/App.module.css
+++ b/client/src/pages/App.module.css
@@ -5,6 +5,15 @@
     text-align: center;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
 .logo {
     height: 6em;
     padding: 1.5em;
@@ -28,12 +37,15 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
+    a:nth-of-type(1) .logo {
         animation: logo-spin infinite 20s linear;
     }
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding: 2em;
 }
 
